core/codegen/tests/ui-fail/from_form_value.stderr
error: tuple structs are not supported
 --> $DIR/from_form_value.rs:4:1
  |
4 | struct Foo1;
  | ^^^^^^^^^^^^
  |
note: error occurred while deriving `FromFormValue`
 --> $DIR/from_form_value.rs:3:10
  |
3 | #[derive(FromFormValue)]
  |          ^^^^^^^^^^^^^

error: tuple structs are not supported
 --> $DIR/from_form_value.rs:8:1
  |
8 | struct Foo2(usize);
  | ^^^^^^^^^^^^^^^^^^^
  |
note: error occurred while deriving `FromFormValue`
 --> $DIR/from_form_value.rs:7:10
  |
7 | #[derive(FromFormValue)]
  |          ^^^^^^^^^^^^^

error: named structs are not supported
  --> $DIR/from_form_value.rs:12:1
   |
12 | / struct Foo3 {
13 | | //~^ ERROR not supported
14 | |     foo: usize,
15 | | }
   | |_^
   |
note: error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:11:10
   |
11 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^

error: variants cannot have fields
  --> $DIR/from_form_value.rs:19:5
   |
19 |     A(usize),
   |     ^^^^^^^^
   |
note: error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:17:10
   |
17 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^

warning: deriving for empty enum
  --> $DIR/from_form_value.rs:24:1
   |
24 | enum Foo5 { }
   | ^^^^^^^^^^^^^

error: type generics are not supported
  --> $DIR/from_form_value.rs:28:11
   |
28 | enum Foo6<T> {
   |           ^
   |
note: error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:27:10
   |
27 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^

error: invalid value: expected string literal
  --> $DIR/from_form_value.rs:35:20
   |
35 |     #[form(value = 123)]
   |                    ^^^
   |
note: error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:33:10
   |
33 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^

error: expected literal or key/value pair
  --> $DIR/from_form_value.rs:42:12
   |
42 |     #[form(value)]
   |            ^^^^^
   |
note: error occurred while deriving `FromFormValue`
  --> $DIR/from_form_value.rs:40:10
   |
40 | #[derive(FromFormValue)]
   |          ^^^^^^^^^^^^^

error: aborting due to 7 previous errors

